[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/resources/axe.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Wish/Wish Vico.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Roboto-MediumItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/resources/Grief.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=10]
draw_center = false
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.1, 0.1, 0.1, 0.8 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.411765, 0.411765, 0.411765, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.301961 )

[sub_resource type="DynamicFont" id=16]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 0.5 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.36, 0, 0, 0.85 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 12
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=14]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=15]
draw_center = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0.05 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0.1 )

[sub_resource type="StyleBoxFlat" id=8]
draw_center = false

[node name="Wish Vico" type="MarginContainer"]
margin_right = 98.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 96.0
margin_bottom = 55.0
custom_styles/panel = SubResource( 10 )

[node name="done" type="Panel" parent="."]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 96.0
margin_bottom = 55.0
custom_styles/panel = SubResource( 1 )

[node name="progress" type="Panel" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 96.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 5 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="f" type="Panel" parent="progress"]
modulate = Color( 0.352941, 0.352941, 0.352941, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -97.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="flair" type="Panel" parent="progress/f"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 96.0
margin_bottom = 55.0
custom_constants/margin_right = 10
custom_constants/margin_left = 5

[node name="h" type="HBoxContainer" parent="m"]
margin_left = 5.0
margin_right = 84.0
margin_bottom = 53.0
custom_constants/separation = 8
alignment = 1

[node name="icon" type="Panel" parent="m/h"]
margin_top = 8.0
margin_right = 36.0
margin_bottom = 44.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 5 )

[node name="icon" type="Sprite" parent="m/h/icon"]
position = Vector2( 18, 18 )
texture = ExtResource( 1 )

[node name="v" type="VBoxContainer" parent="m/h"]
margin_left = 44.0
margin_right = 79.0
margin_bottom = 53.0
alignment = 1

[node name="objective" type="Label" parent="m/h/v"]
margin_top = 9.0
margin_right = 35.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Hoard!"
align = 1

[node name="count" type="Label" parent="m/h/v"]
margin_top = 28.0
margin_right = 35.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "14/25"
align = 1

[node name="confirm deny" type="MarginContainer" parent="."]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 96.0
margin_bottom = 55.0

[node name="bg" type="Panel" parent="confirm deny"]
margin_right = 94.0
margin_bottom = 53.0
custom_styles/panel = SubResource( 12 )

[node name="v" type="VBoxContainer" parent="confirm deny"]
margin_right = 94.0
margin_bottom = 53.0
alignment = 1

[node name="objective2" type="Label" parent="confirm deny/v"]
margin_top = 5.0
margin_right = 94.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Confirm denial"
align = 1

[node name="Label" type="Label" parent="confirm deny/v"]
visible = false
margin_top = 15.0
margin_right = 94.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Confirm denial"
align = 1
autowrap = true

[node name="h" type="HBoxContainer" parent="confirm deny/v"]
margin_top = 24.0
margin_right = 94.0
margin_bottom = 40.0
alignment = 1

[node name="amount" type="Label" parent="confirm deny/v/h"]
margin_left = 15.0
margin_right = 29.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "+1"

[node name="icon" type="Panel" parent="confirm deny/v/h"]
margin_left = 33.0
margin_right = 49.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 15 )

[node name="Sprite" type="Sprite" parent="confirm deny/v/h/icon"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
centered = false

[node name="resource" type="Label" parent="confirm deny/v/h"]
margin_left = 53.0
margin_right = 78.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Grief"

[node name="Button" type="Button" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 96.0
margin_bottom = 55.0
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )

[node name="main_wish" type="MarginContainer" parent="."]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 96.0
margin_bottom = 55.0
rect_clip_content = true
mouse_filter = 2

[node name="Node2D" type="Node2D" parent="main_wish"]

[node name="ColorRect" type="ColorRect" parent="main_wish/Node2D"]
margin_left = -4.0
margin_top = 10.0
margin_right = 16.0
margin_bottom = 15.0
rect_rotation = -44.9999
mouse_filter = 2
color = Color( 1, 0.819608, 0, 0.537255 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Button" to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed" binds= [ true ]]
